using button instead of link because that's what it is. fixes bug where page jumps to the top because it was a link with no destination.

--- a/client/components/album/album.css
+++ b/client/components/album/album.css
@@ -27,6 +27,12 @@
     cursor: pointer;
 }
 
+button.action-trigger {
+    border: none;
+    background: none;
+    outline: none;
+}
+
 .action-trigger:hover {
     background-color: rgba(0, 0, 0, .75);
     transition: background-color .3s;
